--- a/Index.html
+++ b/Index.html
@@ -1,33 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>JavaScript 2</title>
-</head>
-<body>
-<!--Crie um arquivo utilizando variáveis,
-contendo:
-* Um nome
-* Uma profissão
-* Uma idade
-* Um cálculo qualquer-->
-<script type="text/javascript">
-var nome, profissao, idade, calculo;
-nome = (window.prompt("Qual o seu Nome?"));
-idade = parseFloat(window.prompt("Qual a sua Idade?"));
-profissao = (window.prompt("Qual a sua Profissão?"));
-window.alert("Bem vindo(a)!");
-if (idade<18){
-window.alert("Por ser menor de idade, algumas funções do site serão desabilitadas...");
-}
-document.write("<p style='font-weight: bolder;'>DADOS PESSOAIS:</p>");
-document.write("Nome: "+nome+"</br>");
-document.write("Idade: "+idade+"</br>");
-document.write("Profissão: "+profissao+"</br>");
-if (idade<18) {
-calculo=18-idade;
-document.write("Tempo Para a Maioridade: "+calculo+" anos");
-}
-</script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript 2</title>
+  </head>
+  <body>
+    <script type="text/javascript" src="script.js">    </script>
+  </body>
 </html>
